--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-/node_modules/
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
+
+# Build outputs
+dist/
+dist-electron/
+outputjs/
+*.exe
+*.dmg
+*.AppImage
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Runtime - Generated scripts
+scripts/*
+!scripts/EXAMPLE_*
+!scripts/.gitkeep
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Generated files
+*.js.map
+*.d.ts
